--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -377,11 +377,11 @@ CONFIG_MSM_SMD=y
 # CONFIG_MSM_SMD_PKG3 is not set
 CONFIG_MSM_SMD_PKG4=y
 CONFIG_MSM_SMD0_WQ=y
-CONFIG_MSM_SMD_DEBUG=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_N_WAY_SMD=y
 CONFIG_MSM_N_WAY_SMSM=y
 # CONFIG_MSM_RESET_MODEM is not set
-CONFIG_MSM_SMD_LOGGING=y
+# CONFIG_MSM_SMD_LOGGING is not set
 # CONFIG_MSM_SMD_NMEA is not set
 CONFIG_MSM_SMD_TTY=y
 # CONFIG_MSM_SMD_QMI is not set
@@ -389,7 +389,7 @@ CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_DSPS=y
 CONFIG_MSM_ONCRPCROUTER=y
 # CONFIG_MSM_IPC_ROUTER is not set
-CONFIG_MSM_ONCRPCROUTER_DEBUG=y
+# CONFIG_MSM_ONCRPCROUTER_DEBUG is not set
 # CONFIG_MSM_RPC_LOOPBACK_XPRT is not set
 # CONFIG_MSM_RPCSERVER_TIME_REMOTE is not set
 # CONFIG_MSM_RPCSERVER_WATCHDOG is not set
