--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -652,7 +652,7 @@ CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE=y
 CONFIG_CPU_FREQ_GOV_BADASS_3_PHASE_FREQ=1188000
 # CONFIG_CPU_FREQ_GOV_BADASS_GPU_CONTROL is not set
 # CONFIG_CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE is not set
-# CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS is not set
+CONFIG_CPU_FREQ_GOV_BADASS_ALLOW_BYPASS=y
 CONFIG_CPU_FREQ_MIN_TICKS=10
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
 CONFIG_CPU_IDLE=y
