defconfig: Enable Fsync control
Change-Id: I1118cbf967126cd1cdd924dd95a6220bfbf7dc0c

--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -1208,6 +1208,11 @@ CONFIG_MPU_SENSORS_AK8975=y
 # CONFIG_MPU_SENSORS_HSCDTD004A is not set
 CONFIG_MPU_SENSORS_TIMERIRQ=y
 # CONFIG_MPU_SENSORS_DEBUG is not set
+#
+# Motorola TS 27.010 Mux driver over UART
+#
+# CONFIG_MOT_FEAT_TS27010MUX_UART is not set
+CONFIG_FSYNC_CONTROL=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
